pkgs/dartcv_core/src/imgproc.h

// Returns a structuring element of the specified size and shape for morphological operations.
// Mat cv::getStructuringElement (int shape, Size ksize, Point anchor=Point(-1,-1))
CvStatus *GetStructuringElement(int shape, Size ksize, Mat *rval);
// Calculates the font-specific size to use to achieve a given height in pixels.
// double cv::getFontScaleFromHeight (const int fontFace, const int pixelHeight, const int thickness=1)

// Calculates the width and height of a text string.
// Size cv::getTextSize (const String &text, int fontFace, double fontScale, int thickness, int *baseLine)
CvStatus *GetTextSizeWithBaseline(
    const char *text, int fontFace, double fontScale, int thickness, int *baseline, Size *rval
);
// Creates a smart pointer to a LineSegmentDetector object and initializes it.
// Ptr< LineSegmentDetector > cv::createLineSegmentDetector (int refine=LSD_REFINE_STD, double scale=0.8, double sigma_scale=0.6, double quant=2.0, double ang_th=22.5, double log_eps=0, double density_th=0.7, int n_bins=1024)

// Determines strong corners on an image.
// Same as above, but returns also quality measure of the detected corners.
// void cv::goodFeaturesToTrack (InputArray image, OutputArray corners, int maxCorners, double qualityLevel, double minDistance, InputArray mask, int blockSize, int gradientSize, bool useHarrisDetector=false, double k=0.04)
// void cv::goodFeaturesToTrack (InputArray image, OutputArray corners, int maxCorners, double qualityLevel, double minDistance, InputArray mask, OutputArray cornersQuality, int blockSize=3, int gradientSize=3, bool useHarrisDetector=false, double k=0.04)
// void cv::goodFeaturesToTrack (InputArray image, OutputArray corners, int maxCorners, double qualityLevel, double minDistance, InputArray mask=noArray(), int blockSize=3, bool useHarrisDetector=false, double k=0.04)
CvStatus *GoodFeaturesToTrack(
    Mat img,
    VecPoint2f *corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    bool useHarrisDetector,
    double k
);
CvStatus *GoodFeaturesToTrackWithGradient(
    Mat img,
    VecPoint2f *corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    int gradientSize,
    bool useHarrisDetector,
    double k
);
// Finds circles in a grayscale image using the Hough transform.
// void cv::HoughCircles (InputArray image, OutputArray circles, int method, double dp, double minDist, double param1=100, double param2=100, int minRadius=0, int maxRadius=0)
CvStatus *HoughCircles(Mat src, Mat circles, int method, double dp, double minDist);
CvStatus *HoughCirclesWithParams(
    Mat src,
    Mat circles,
    int method,
    double dp,
    double minDist,
    double param1,
    double param2,
    int minRadius,
    int maxRadius
);
// SECTION - Image Segmentation
// Runs the GrabCut algorithm.
// void cv::grabCut (InputArray img, InputOutputArray mask, Rect rect, InputOutputArray bgdModel, InputOutputArray fgdModel, int iterCount, int mode=GC_EVAL)
CvStatus *
GrabCut(Mat img, Mat mask, Rect rect, Mat bgdModel, Mat fgdModel, int iterCount, int mode);