packages/dartcv/lib/src/g/imgproc.g.dart


  ffi.Pointer<CvStatus> GetRotationMatrix2D_Async(
    CvPoint2f center,
    double angle,
    double scale,
    imp1.CvCallback_1 callback,
  ) {
    return _GetRotationMatrix2D_Async(
      center,
      angle,
      scale,
      callback,
    );
  }

  late final _GetRotationMatrix2D_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CvPoint2f, ffi.Double, ffi.Double,
              imp1.CvCallback_1)>>('GetRotationMatrix2D_Async');
  late final _GetRotationMatrix2D_Async =
      _GetRotationMatrix2D_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CvPoint2f, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetStructuringElement(
    int shape,
    CvSize ksize,
    ffi.Pointer<Mat> rval,
  ) {
    return _GetStructuringElement(
      shape,
      ksize,
      rval,
    );
  }

  late final _GetStructuringElementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int, CvSize, ffi.Pointer<Mat>)>>('GetStructuringElement');
  late final _GetStructuringElement = _GetStructuringElementPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, CvSize, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> GetStructuringElement_Async(
    int shape,
    CvSize ksize,
    CvPoint anchor,
    imp1.CvCallback_1 callback,
  ) {
    return _GetStructuringElement_Async(
      shape,
      ksize,
      anchor,
      callback,
    );
  }

  late final _GetStructuringElement_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, CvSize, CvPoint,
              imp1.CvCallback_1)>>('GetStructuringElement_Async');
  late final _GetStructuringElement_Async =
      _GetStructuringElement_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, CvSize, CvPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetTextSizeWithBaseline(
    ffi.Pointer<ffi.Char> text,
    int fontFace,
    double fontScale,
    int thickness,
    ffi.Pointer<ffi.Int> baseline,
    ffi.Pointer<CvSize> rval,
  ) {
    return _GetTextSizeWithBaseline(
      text,
      fontFace,
      fontScale,
      thickness,
      baseline,
      rval,
    );
  }

  late final _GetTextSizeWithBaselinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<CvSize>)>>('GetTextSizeWithBaseline');
  late final _GetTextSizeWithBaseline = _GetTextSizeWithBaselinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, int, double, int,
          ffi.Pointer<ffi.Int>, ffi.Pointer<CvSize>)>();

  ffi.Pointer<CvStatus> GetTextSizeWithBaseline_Async(
    ffi.Pointer<ffi.Char> text,
    int fontFace,
    double fontScale,
    int thickness,
    imp1.CvCallback_2 callback,
  ) {
    return _GetTextSizeWithBaseline_Async(
      text,
      fontFace,
      fontScale,
      thickness,
      callback,
    );
  }

  late final _GetTextSizeWithBaseline_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              imp1.CvCallback_2)>>('GetTextSizeWithBaseline_Async');
  late final _GetTextSizeWithBaseline_Async =
      _GetTextSizeWithBaseline_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, int, double, int, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> GoodFeaturesToTrack(
    Mat img,
    ffi.Pointer<VecPoint2f> corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    bool useHarrisDetector,
    double k,
  ) {
    return _GoodFeaturesToTrack(
      img,
      corners,
      maxCorners,
      quality,
      minDist,
      mask,
      blockSize,
      useHarrisDetector,
      k,
    );
  }

  late final _GoodFeaturesToTrackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Pointer<VecPoint2f>,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              Mat,
              ffi.Int,
              ffi.Bool,
              ffi.Double)>>('GoodFeaturesToTrack');
  late final _GoodFeaturesToTrack = _GoodFeaturesToTrackPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint2f>, int, double,
          double, Mat, int, bool, double)>();

  ffi.Pointer<CvStatus> GoodFeaturesToTrackWithGradient(
    Mat img,
    ffi.Pointer<VecPoint2f> corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    int gradientSize,
    bool useHarrisDetector,
    double k,
  ) {
    return _GoodFeaturesToTrackWithGradient(
      img,
      corners,
      maxCorners,
      quality,
      minDist,
      mask,
      blockSize,
      gradientSize,
      useHarrisDetector,
      k,
    );
  }

  late final _GoodFeaturesToTrackWithGradientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Pointer<VecPoint2f>,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              ffi.Double)>>('GoodFeaturesToTrackWithGradient');
  late final _GoodFeaturesToTrackWithGradient =
      _GoodFeaturesToTrackWithGradientPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint2f>, int,
              double, double, Mat, int, int, bool, double)>();

  ffi.Pointer<CvStatus> GoodFeaturesToTrackWithGradient_Async(
    Mat img,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    int gradientSize,
    bool useHarrisDetector,
    double k,
    imp1.CvCallback_1 callback,
  ) {
    return _GoodFeaturesToTrackWithGradient_Async(
      img,
      maxCorners,
      quality,
      minDist,
      mask,
      blockSize,
      gradientSize,
      useHarrisDetector,
      k,
      callback,
    );
  }

  late final _GoodFeaturesToTrackWithGradient_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              ffi.Double,
              imp1.CvCallback_1)>>('GoodFeaturesToTrackWithGradient_Async');
  late final _GoodFeaturesToTrackWithGradient_Async =
      _GoodFeaturesToTrackWithGradient_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, int, double, double, Mat, int,
              int, bool, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GoodFeaturesToTrack_Async(
    Mat img,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    bool useHarrisDetector,
    double k,
    imp1.CvCallback_1 callback,
  ) {
    return _GoodFeaturesToTrack_Async(
      img,
      maxCorners,
      quality,
      minDist,
      mask,
      blockSize,
      useHarrisDetector,
      k,
      callback,
    );
  }

  late final _GoodFeaturesToTrack_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              Mat,
              ffi.Int,
              ffi.Bool,
              ffi.Double,
              imp1.CvCallback_1)>>('GoodFeaturesToTrack_Async');
  late final _GoodFeaturesToTrack_Async =
      _GoodFeaturesToTrack_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, int, double, double, Mat, int,
              bool, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GrabCut(
    Mat img,
    Mat mask,
    CvRect rect,
    Mat bgdModel,
    Mat fgdModel,
    int iterCount,
    int mode,
  ) {
    return _GrabCut(
      img,
      mask,
      rect,
      bgdModel,
      fgdModel,
      iterCount,
      mode,
    );
  }

  late final _GrabCutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, CvRect, Mat, Mat, ffi.Int, ffi.Int)>>('GrabCut');
  late final _GrabCut = _GrabCutPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, CvRect, Mat, Mat, int, int)>();

  ffi.Pointer<CvStatus> GrabCut_Async(
    Mat img,
    Mat mask,
    CvRect rect,
    Mat bgdModel,
    Mat fgdModel,
    int iterCount,
    int mode,
    imp1.CvCallback_0 callback,
  ) {
    return _GrabCut_Async(
      img,
      mask,
      rect,
      bgdModel,
      fgdModel,
      iterCount,
      mode,
      callback,
    );
  }

  late final _GrabCut_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, CvRect, Mat, Mat, ffi.Int,
              ffi.Int, imp1.CvCallback_0)>>('GrabCut_Async');
  late final _GrabCut_Async = _GrabCut_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, CvRect, Mat, Mat, int, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> HoughCircles(
    Mat src,
    Mat circles,
    int method,
    double dp,
    double minDist,
  ) {
    return _HoughCircles(
      src,
      circles,
      method,
      dp,
      minDist,
    );
  }

  late final _HoughCirclesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Double, ffi.Double)>>('HoughCircles');
  late final _HoughCircles = _HoughCirclesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, double, double)>();

  ffi.Pointer<CvStatus> HoughCirclesWithParams(
    Mat src,
    Mat circles,
    int method,
    double dp,
    double minDist,
    double param1,
    double param2,
    int minRadius,
    int maxRadius,
  ) {
    return _HoughCirclesWithParams(
      src,
      circles,
      method,
      dp,
      minDist,
      param1,
      param2,
      minRadius,
      maxRadius,
    );
  }

  late final _HoughCirclesWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int)>>('HoughCirclesWithParams');
  late final _HoughCirclesWithParams = _HoughCirclesWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, double, double, double, double, int, int)>();

  ffi.Pointer<CvStatus> HoughCirclesWithParams_Async(
    Mat src,
    int method,
    double dp,
    double minDist,
    double param1,
    double param2,
    int minRadius,
    int maxRadius,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughCirclesWithParams_Async(
      src,
      method,
      dp,
      minDist,
      param1,
      param2,
      minRadius,
      maxRadius,
      callback,
    );
  }

  late final _HoughCirclesWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              imp1.CvCallback_1)>>('HoughCirclesWithParams_Async');
  late final _HoughCirclesWithParams_Async =
      _HoughCirclesWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, int, double, double, double,
              double, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HoughCircles_Async(
    Mat src,
    int method,
    double dp,
    double minDist,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughCircles_Async(
      src,
      method,
      dp,
      minDist,
      callback,
    );
  }
